--- a/hwhc-markdown.Rmd
+++ b/hwhc-markdown.Rmd
@@ -283,6 +283,141 @@ Surrey Heartlands ICB had the lowest estimated number of certificates issued per
 
 ------------------------------------------------------------------------
 
+### 2.2 Maternity exemption certificate
+
+`r infoBox_border("",text = "Maternity exemption certifications exempt the holders from NHS prescription charges. It can also be used as as proof of entitlement to free NHS dental treatment.
+
+Maternity exemption certificates are available to anybody who is currently pregnant, or has given birth in the last 12 months. The certificate is valid until 12 months after the birth of the baby.
+
+Applications are submitted via a midwife, doctor or health visitor who confirms eligibility. Both paper and digital applications are available."
+, width = "100%")`
+
+#### Figure X: Estimated number of applications received 2019/20 to 2023/24 {.toc-ignore}
+
+::: {.row style="display: flex; padding-bottom: 15px;"}
+::: col-md-6
+`r infoBox_no_border("", text = "<b> There were 555,000 applications received in 2023/24</b>", width = "100%")`
+:::
+
+::: col-md-6
+`r infoBox_no_border("", text = "<b>Applications increased 11% from 2022/23</b>", width = "100%")`
+:::
+:::
+
+```{r ch_mat_fy_app}
+ch_mat_fy_app
+```
+
+`r get_download_button(title = "Download chart data", data = dl_mat_fy_app, filename = "hwhc_figure_x")`
+
+Applications for maternity exemption certificates dipped in 2020/2021 but has increased in each of the following years. In 2023/24, the increase in applications of 11% is the largest in recent years.
+
+In 2023/24 there were 555,000 applications received, up from 499,000 in 2022/23.
+
+
+------------------------------------------------------------------------
+
+### 2.3 Medical exemption certificate
+
+`r infoBox_border("",text = "Medical exemption certifications exempt the holders from NHS prescription charges only. Patients with any of the qualifying conditions can apply for a certificate. But it is the certificate that provides exemption - not the condition.
+
+Patients can apply for a medical exemption certificate if they have either:
+
+* a permanent fistula (for example, caecostomy, colostomy, laryngostomy or ileostomy) which needs continuous surgical dressing or an appliance
+* a form of hypoadrenalism (for example, Addison’s Disease) for which specific substitution therapy is essential
+* diabetes insipidus and other forms of hypopituitarism
+* diabetes mellitus, except where treatment is by diet alone
+* hypoparathyroidism
+* myasthenia gravis
+* myxoedema (hypothyroidism which needs thyroid hormone replacement)
+* epilepsy which needs continuous anticonvulsive therapy
+* a continuing physical disability which means you cannot go out without the help of another person
+* cancer and are undergoing treatment for either:
+  * cancer
+  * the effects of cancer
+  * the effects of cancer treatment
+
+Medical exemption certificates are usually valid for 5 years. A GP or doctor can provide the application form to qualifying patients."
+, width = "100%")`
+
+#### Figure X: Estimated number of applications received 2019/20 to 2023/24 {.toc-ignore}
+
+::: {.row style="display: flex; padding-bottom: 15px;"}
+::: col-md-6
+`r infoBox_no_border("", text = "<b> There were 495,000 applications received in 2023/24</b>", width = "100%")`
+:::
+
+::: col-md-6
+`r infoBox_no_border("", text = "<b>Applications dropped during 2020/21 and 2021/22 but have since increased</b>", width = "100%")`
+:::
+:::
+
+```{r ch_med_fy_app}
+ch_med_fy_app
+```
+
+`r get_download_button(title = "Download chart data", data = dl_med_fy_app, filename = "hwhc_figure_x")`
+
+Applications for medical exemption certificates dipped in 2020/21 and 2021/22 but has since increased to the highest level in recent years. 
+
+In 2023/24 there were 495,000 applications received, up from 478,000 in 2022/23.
+
+------------------------------------------------------------------------
+### 2.4 NHS Prescription Prepayment Certificate (PPC)
+
+`r infoBox_border("",text = "A PPC can help provide savings for people who pay for NHS Prescriptions. The certificate covers all a patient's NHS prescription charges for a set price. Patients will save money if they need 4 or more items in 3 months or 12 or more items in 12 months.
+
+PPCs can be purchased in-person at some pharmacies or direct via the [PPC webpage](https://www.nhsbsa.nhs.uk/help-nhs-prescription-costs/nhs-prescription-prepayment-certificate-ppc). Applicants can choose between a 3-month and 12-month certificate.
+
+Patients receiving prescriptions for hormone replacement therapy (HRT) may benefit more from the Hormone Replacement Therapy Prescription Prepayment Certificate (HRT PPC)."
+, width = "100%")`
+
+#### Figure X: Estimated number of applications received 2018/19 to 2023/24, split by PPC duration {.toc-ignore}
+
+::: {.row style="display: flex; padding-bottom: 15px;"}
+::: col-md-6
+`r infoBox_no_border("", text = "<b> There were 3,150,000 applications received in 2023/24</b>", width = "100%")`
+:::
+
+::: col-md-6
+`r infoBox_no_border("", text = "<b>Applications for PPC have increased each and every year</b>", width = "100%")`
+:::
+:::
+
+```{r ch_ppc_fy_app}
+ch_ppc_fy_app
+```
+
+`r get_download_button(title = "Download chart data", data = dl_ppc_fy_app, filename = "hwhc_figure_x")`
+
+Applications for PPC have shown a steady year-on-year increase. In 2023/24 there were 3,150,000 applications received, up from 3,030,000 in 2022/23 which is a 4% increase.
+
+The number of applications for 12-month certificates is more than double the number of applications for 3-month certificates. The year-on-year increase for 12-month certificates is also higher.
+
+------------------------------------------------------------------------
+
+### 2.5 NHS tax credit exemption certificates
+
+`r infoBox_border("",text = "NHS tax credit exemption certificates provide support for:
+
+* free NHS prescriptions
+* free NHS dental treatment
+* free NHS sight tests
+* help with the cost of glasses or contact lenses
+* free NHS wigs and fabric supports
+* help with the cost of travel to receive NHS treatment
+
+There is no application process as HM Revenue and Customs will identify who is eligible. Certificates are issued to people if the annual income used to calculate Tax Credits is £15,276 or less and they receive either:
+
+* Child Tax Credit
+* Working Tax Credit and Child Tax Credit paid together
+* Working Tax Credit including a disability or severe disability element
+
+Certificates are valid for 7 months, and issued every 6 months in April and September."
+, width = "100%")`
+
+------------------------------------------------------------------------
+
 ## 3 About these statistics
 
 ### 3.1 Statistical Disclosure Control (SDC) {.toc-ignore}
